# Chessboard_AR

./: .gitignore  CMakeLists.txt
include/: app.hpp  calibrator.hpp  camera.hpp  fragment_shader.hpp  glfw.hpp  glfw_window.hpp  mesh.hpp  model.hpp  program.hpp  transform.hpp  utils.hpp  vertex.hpp  vertex_shader.hpp  window.hpp
include/lights/: point_light.hpp
modules/: glad.c
modules/glad/: glad.h
shaders/: basic_frag.glsl  basic_vert.glsl  texture_frag.glsl
src/: app.cpp  calibrator.cpp  camera.cpp  glfw.cpp  main.cpp  mesh.cpp  model.cpp  program.cpp
